# phraya

./: .dockerignore  .gitignore  AUDIT-176.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  PRD.md  README.md  SIMD_ANALYSIS.md  WFA_SIMD_OPPORTUNITIES.md
.github/workflows/: release.yml  test-all.yml  test-issue.yml
docs/adr/: 0001-record-architecture-decisions.md  0002-simd-match-extension.md  0003-alignment-strategy-ladder.md  0004-fast-strategy-low-sensitivity.md  0005-paired-end-proper-pair-fraction.md  0006-simd-build-requirements-and-packaging.md  0007-score-bounded-alternate-abandonment.md  0008-strategy-ladder-recall-axis.md  0009-dense-rated-plan-seeding.md  0010-filter-preset-rename-strict-tolerant.md  0011-content-addressed-reference-palette.md  0012-chaining-supersedes-branch-and-bound.md  README.md
phraya-align/: Cargo.toml  TESTING_NEON.md  TEST_PLAN.md  TEST_PLAN_ISSUE_70.md
phraya-align/benches/: bench_wfa_scalar.rs  wfa_neon_benchmark.rs  wfa_simd_bench.rs
phraya-align/examples/: profile_wfa.rs
phraya-align/src/: chaining.rs  executor.rs  issue_185_tests.rs  lib.rs  local_coverage_tests.rs  seeding.rs  wfa_neon.rs  wfa_simd.rs  wfa_simd_dispatch.rs  wfa_simd_safety.rs
phraya-align/tests/: chaining_correctness.rs  chaining_perf.rs  chaining_vs_legacy_differential.rs  issue_133_neon_acceptance.rs  issue_146_kmer_uniqueness_tests.rs  issue_147_composite_confidence_tests.rs  issue_148_strategy_tests.rs  issue_176_strategy_dispatch.rs  issue_179_arc_str_sharing.rs  issue_183_score_bounded_branch_and_bound.rs  issue_184_strategy_recall_axis.rs  issue_200_read_sketch_reuse.rs  test_wfa_algorithm.rs  test_wfa_scalar_acceptance.rs  wfa_perf.rs
phraya-cli/: Cargo.toml
phraya-cli/src/: main.rs
phraya-cli/tests/: align_command.rs  evidence_subcommand.rs  integration_test_align.rs  integration_test_batch_mode.rs  integration_test_case3.rs  integration_test_case4.rs  integration_test_e2e_case2.rs  integration_test_e2e_case3.rs  integration_test_filter.rs  integration_test_merge.rs  integration_test_plan.rs  integration_test_plan_tasks.rs  issue_145_hotspot_intervals_test.rs  issue_148_cli_strategy_tests.rs  issue_15_ecoli_integration_test.rs  issue_162_binary_rename_workspace_metadata_tests.rs  issue_163_crates_io_distribution_tests.rs  issue_163_distribution_tests.rs  issue_164_release_workflow_tests.rs  issue_165_release_matrix_tests.rs  issue_166_docker_distribution_tests.rs  issue_169_release_orchestration_tests.rs  issue_181_preset_rename.rs  issue_184_cli_strategy_tests.rs  issue_200_plan_populates_read_sketches.rs  issue_210_fixture_tests.rs  issue_226_reference_palette.rs  issue_58_mvp_acceptance_tests.rs
phraya-core/: Cargo.toml
phraya-core/benches/: coverage_track.rs
phraya-core/src/: confidence.rs  evidence.rs  hotspot_tests.rs  lib.rs  repeat.rs  types.rs
phraya-core/tests/: alignment_context_scorer_test.rs  test_mate_info.rs  test_variant_observation_serialization.rs
phraya-filter/: Cargo.toml
phraya-filter/src/: extractors.rs  lib.rs  tsv.rs  vcf.rs
phraya-filter/tests/: issue_146_filter_tests.rs  test_paired_end_filters.rs
phraya-index/: Cargo.toml
phraya-index/src/: lib.rs  minimizer.rs  seeding.rs
phraya-index/tests/: test_kmer_sketching.rs
phraya-io/: Cargo.toml  build.rs  dummy.fasta  test.fasta
phraya-io/src/: ab1.rs  bam.rs  bam_cram.rs  fasta_fastq_tests.rs  format.rs  lib.rs  phraya.rs  phraya_format.rs  plan.rs  pod5.rs  queries.rs  reader.rs  sff.rs  use_case.rs
phraya-io/tests/: README.md  api_surface.rs  fasta_fastq_io.rs  issue_182_dense_sketches.rs  issue_203_pod5_parser.rs  issue_206_ab1_parser.rs  issue_207_sff_parser.rs  test_bam_mate_extraction.rs  test_insert_size_distribution.rs
phraya-io/tests/fixtures/: README.md  create_compressed.py  generate_fixtures.sh  malformed.fasta  malformed.fastq  sample.fasta  sample.fasta.bz2  sample.fastq  sample.fastq.bz2
scripts/: assert_simd.sh
scripts/benchmark/local/: gen_synthetic.py  normalize_tsv.py  run_local_bench.sh  time_run.py
scripts/benchmark/slurm/: README.md  TODO.md  benchmark.slurm  run_benchmark.sh  stream.slurm
scripts/benchmark/slurm/config/: global.env  targets.conf
scripts/benchmark/slurm/utils/: acquire_medium_large.sh  acquire_targets.sh  aggregate.slurm  aggregate_results.py  count_phraya_aligned.py  measure_rss.py  nodelist.sh  parse_time.py  phraya_accuracy.py  requirements.txt  sam_accuracy.py
scripts/benchmark/slurm/wrappers/: README_NEW_ALIGNERS.md  _phraya_run.sh  bowtie2.sh  bwa-mem2.sh  bwa-pipeline.sh  minibwa.sh  minimap2.sh  phraya-exact.sh  phraya-fast.sh  phraya-sensitive.sh  phraya.sh  rammap.sh
