[package]
name = "phraya-align"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
multiversion = "0.7"
phraya-core = { path = "../phraya-core" }
serde = { workspace = true }
phraya-io = { path = "../phraya-io" }

[dev-dependencies]
criterion = "0.5"
phraya-filter = { path = "../phraya-filter" }

[[bench]]
name = "wfa_simd_bench"
harness = false
