[package]
name = "phraya-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
phraya-core = { workspace = true }
phraya-io = { workspace = true }
phraya-index = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
log = { workspace = true }
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
