[package]
name = "phraya-cli"
description = "General-purpose pairwise sequence aligner for bacterial genomics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "phraya"
path = "src/main.rs"

[dependencies]
phraya-core = { workspace = true }
phraya-io = { workspace = true }
phraya-align = { workspace = true }
phraya-filter = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
log = { workspace = true }
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
rayon = { workspace = true }
noodles-bam = "0.67"
noodles-sam = "0.64"

[dev-dependencies]
tempfile = "3.8"
