[package]
name = "phraya-io"
version = "0.1.0"
edition = "2021"

[dependencies]
phraya-core = { path = "../phraya-core" }
phraya-index = { path = "../phraya-index" }
flate2 = "1"
rmp-serde = "1"
zstd = "0.13"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
gzip-header = "0.3"
